--- a/preview.html
+++ b/preview.html
@@ -5,6 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>MiTienda - Vista previa</title>
  <link rel="stylesheet" href="css/style-pp.css">
+
 </head>
 <body>
  <header class="header">
@@ -23,7 +24,9 @@
  <section class="preview">
   <h2>Vista previa de producto</h2>
   <div class="preview-box">
-   <img src="https://via.placeholder.com/400" alt="Producto destacado">
+   <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+   <img src="img/Silla.png" alt="Producto destacado">
+   </div>
    <div class="preview-info">
     <h3>Producto Destacado</h3>
     <p>Producto de alta calidad con diseño elegante.</p>
