--- a/productos.html
+++ b/productos.html
@@ -32,17 +32,14 @@
         <img src="img/Electronico.png" alt="Producto 1">
         </div>
         <div class="producto-info">
-          <h3>Producto 1</h3>
-          <p>Descripción breve del producto.</p>
-          <p class="precio">$49.99</p>
+          <h3>Mystery box</h3>
+          <p>Puede tocarte cualquiera de los articulos en la imagen.</p>
+          <p class="precio">$149.99</p>
           <div class="producto-btns">
             <button class="btn-preview"
               data-title="Producto 1"
-<<<<<<< HEAD
               data-img="img/Electronico.png"
-=======
               data-img="https://via.placeholder.com/400"
->>>>>>> origin/Carlos
               data-price="$49.99"
               data-desc="Este es un producto de ejemplo con características increíbles.">
               Vista previa
@@ -54,25 +51,19 @@
 
       <!-- Producto 2 -->
       <div class="producto-item">
-<<<<<<< HEAD
         <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
         <img src="img/Mouse.png" alt="Producto 2">
         </div>
-=======
-        <img src="https://via.placeholder.com/120" alt="Producto 2">
->>>>>>> origin/Carlos
         <div class="producto-info">
-          <h3>Producto 2</h3>
-          <p>Descripción breve del producto.</p>
-          <p class="precio">$79.99</p>
+          
+          <h3>Mouse Logitech</h3>
+          <p>Mouse Logitech G203 Blanco.</p>
+          <p class="precio">$49.99</p>
           <div class="producto-btns">
             <button class="btn-preview"
               data-title="Producto 2"
-<<<<<<< HEAD
               data-img="img/Mouse.png"
-=======
               data-img="https://www.pngwing.com/es/free-png-dkhnn/download"
->>>>>>> origin/Carlos
               data-price="$79.99"
               data-desc="Otro producto de ejemplo con muy buena calidad.">
               Vista previa
@@ -84,25 +75,19 @@
 
       <!-- Producto 3 -->
       <div class="producto-item">
-<<<<<<< HEAD
+
         <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
         <img src="img/Celular.png" alt="Producto 3">
         </div>
-=======
-        <img src="https://via.placeholder.com/120" alt="Producto 3">
->>>>>>> origin/Carlos
         <div class="producto-info">
-          <h3>Producto 3</h3>
-          <p>Descripción breve del producto.</p>
-          <p class="precio">$99.99</p>
+          <h3>Iphone 15 Pro Max.</h3>
+          <p>Almacenamiento de 256GB, procesador M3 pro max.</p>
+          <p class="precio">$999.99</p>
           <div class="producto-btns">
             <button class="btn-preview"
               data-title="Producto 3"
-<<<<<<< HEAD
               data-img="img/Celular.png"
-=======
               data-img="https://via.placeholder.com/400"
->>>>>>> origin/Carlos
               data-price="$99.99"
               data-desc="Producto destacado con excelente valoración de clientes.">
               Vista previa
@@ -111,16 +96,14 @@
           </div>
         </div>
       </div>
-<<<<<<< HEAD
-
       <!-- Producto 4 -->
       <div class="producto-item">
         <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
         <img src="img/Laptop.png" alt="Producto 4">
         </div>
         <div class="producto-info">
-          <h3>Producto 4</h3>
-          <p>Descripción breve del producto.</p>
+          <h3>Laptop ROG G16</h3>
+          <p>Procesador i7 12800HX - 16GB RAM - 512GB SSD.</p>
           <p class="precio">$399.99</p>
           <div class="producto-btns">
             <button class="btn-preview"
@@ -141,8 +124,8 @@
         <img src="img/Play.png" alt="Producto 5">
         </div>
         <div class="producto-info">
-          <h3>Producto 5</h3>
-          <p>Descripción breve del producto.</p>
+          <h3>Play Station 5</h3>
+          <p>Slim con lectora de disco y un mando viene con 2 juegos gratis 1Tb de almacenamiento.</p>
           <p class="precio">$549.99</p>
           <div class="producto-btns">
             <button class="btn-preview"
@@ -156,8 +139,6 @@
           </div>
         </div>
       </div>
-=======
->>>>>>> origin/Carlos
     </div>
   </section>
 
