Se agrego un producto
teclado

--- a/productos.html
+++ b/productos.html
@@ -139,6 +139,28 @@
           </div>
         </div>
       </div>
+
+      <!-- Producto 6 -->
+       <div class="producto-item">
+        <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+        <img src="img/Teclado.png" alt="Producto 5">
+        </div>
+        <div class="producto-info">
+          <h3>Play Station 5</h3>
+          <p>Slim con lectora de disco y un mando viene con 2 juegos gratis 1Tb de almacenamiento.</p>
+          <p class="precio">$549.99</p>
+          <div class="producto-btns">
+            <button class="btn-preview"
+              data-title="Producto 3"
+              data-img="img/Play.png"
+              data-price="$549.99"
+              data-desc="Producto destacado con excelente valoración de clientes.">
+              Vista previa
+            </button>
+            <button class="btn">Añadir al carrito</button>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
