elminacion de archivo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,36 @@
       </div>
     </div>
   </section>
-
+  
+<section class="catalogo">
+  <h2>Catálogo</h2>
+  <div class="grid">
+    <div class="card">
+      <img src="img/Laptop.png" alt="Laptop Pro">
+      <h3>Laptop Pro</h3>
+      <p>$399.99</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="img/Play.png" alt="Consola Play">
+      <h3>Consola Play</h3>
+      <p>$549.99</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="img/Teclado.png" alt="Teclado Mecánico">
+      <h3>Teclado Mecánico</h3>
+      <p>$89.99</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="img/Mouse.png" alt="Mouse Gamer">
+      <h3>Mouse Gamer</h3>
+      <p>$49.99</p>
+      <button>Comprar</button>
+    </div>
+  </div>
+</section>
   <!-- OPINIONES DE CLIENTES -->
   <section class="opiniones">
     <h2>Lo que dicen nuestros clientes</h2>
