--- a/productos.html
+++ b/productos.html
@@ -5,102 +5,184 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>MiTienda - Productos</title>
  <link rel="stylesheet" href="css/style-pp.css">
+ <link rel="stylesheet" href="css/style-carrito2.css">
 </head>
-
 <body>
- <header class="header">
-  <div class="container">
-   <div class="logo">MiTienda</div>
-   <nav class="nav">
-    <a href="index.html">Inicio</a>
-    <a href="productos.html" class="active">Productos</a>
-    <a href="preview.html">Vista previa</a>
-    <a href="pago.html">Pago</a>
-    <a href="contacto.html">Contacto</a>
-    <a href="#" id="verCarrito">🛒 Carrito (<span id="cantidad">0</span>)</a>
-   </nav>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="container">
+      <div class="logo">MiTienda</div>
+      <nav class="nav">
+        <a href="index.html">Inicio</a>
+        <a href="productos.html" class="active">Productos</a>
+        <a href="preview.html">Vista previa</a>
+        <a href="carrito.html">Carrito</a>
+        <a href="pago.html">Pago</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- PRODUCTOS -->
+  <section class="productos">
+    <h2>Nuestros Productos</h2>
+    <div class="productos-box">
+      <!-- Producto 1 -->
+      <div class="producto-item">
+        <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+        <img src="img/Electronico.png" alt="Producto 1">
+        </div>
+        <div class="producto-info">
+          <h3>Mystery box</h3>
+          <p>Puede tocarte cualquiera de los articulos en la imagen.</p>
+          <p class="precio">$149.99</p>
+          <div class="producto-btns">
+            <button class="btn-preview"
+              data-title="Producto 1"
+              data-img="img/Electronico.png"
+              data-img="https://via.placeholder.com/400"
+              data-price="$49.99"
+              data-desc="Este es un producto de ejemplo con características increíbles.">
+              Vista previa
+            </button>
+            <button class="btn">Añadir al carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 2 -->
+      <div class="producto-item">
+        <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+        <img src="img/Mouse.png" alt="Producto 2">
+        </div>
+        <div class="producto-info">
+          
+          <h3>Mouse Logitech</h3>
+          <p>Mouse Logitech G203 Blanco.</p>
+          <p class="precio">$49.99</p>
+          <div class="producto-btns">
+            <button class="btn-preview"
+              data-title="Producto 2"
+              data-img="img/Mouse.png"
+              data-img="https://www.pngwing.com/es/free-png-dkhnn/download"
+              data-price="$79.99"
+              data-desc="Otro producto de ejemplo con muy buena calidad.">
+              Vista previa
+            </button>
+            <button class="btn">Añadir al carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 3 -->
+      <div class="producto-item">
+
+        <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+        <img src="img/Celular.png" alt="Producto 3">
+        </div>
+        <div class="producto-info">
+          <h3>Iphone 15 Pro Max.</h3>
+          <p>Almacenamiento de 256GB, procesador M3 pro max.</p>
+          <p class="precio">$999.99</p>
+          <div class="producto-btns">
+            <button class="btn-preview"
+              data-title="Producto 3"
+              data-img="img/Celular.png"
+              data-img="https://via.placeholder.com/400"
+              data-price="$99.99"
+              data-desc="Producto destacado con excelente valoración de clientes.">
+              Vista previa
+            </button>
+            <button class="btn">Añadir al carrito</button>
+          </div>
+        </div>
+      </div>
+      <!-- Producto 4 -->
+      <div class="producto-item">
+        <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+        <img src="img/Laptop.png" alt="Producto 4">
+        </div>
+        <div class="producto-info">
+          <h3>Laptop ROG G16</h3>
+          <p>Procesador i7 12800HX - 16GB RAM - 512GB SSD.</p>
+          <p class="precio">$399.99</p>
+          <div class="producto-btns">
+            <button class="btn-preview"
+              data-title="Producto 3"
+              data-img="img/Laptop.png"
+              data-price="$399.99"
+              data-desc="Producto destacado con excelente valoración de clientes.">
+              Vista previa
+            </button>
+            <button class="btn">Añadir al carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 5 -->
+      <div class="producto-item">
+        <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+        <img src="img/Play.png" alt="Producto 5">
+        </div>
+        <div class="producto-info">
+          <h3>Play Station 5</h3>
+          <p>Slim con lectora de disco y un mando viene con 2 juegos gratis 1Tb de almacenamiento.</p>
+          <p class="precio">$549.99</p>
+          <div class="producto-btns">
+            <button class="btn-preview"
+              data-title="Producto 3"
+              data-img="img/Play.png"
+              data-price="$549.99"
+              data-desc="Producto destacado con excelente valoración de clientes.">
+              Vista previa
+            </button>
+            <button class="btn">Añadir al carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 6 -->
+       <div class="producto-item">
+        <div class="producto-img" Style="width: 120px; height: 120px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+        <img src="img/Teclado.png" alt="Producto 6">
+        </div>
+        <div class="producto-info">
+          <h3>Teclado Redragon</h3>
+          <p>Teclado Mecanico Redragon con Luces RGB</p>
+          <p class="precio">$549.99</p>
+          <div class="producto-btns">
+            <button class="btn-preview"
+              data-title="Producto 3"
+              data-img="img/Play.png"
+              data-price="$549.99"
+              data-desc="Producto destacado con excelente valoración de clientes.">
+              Vista previa
+            </button>
+            <button class="btn">Añadir al carrito</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- MODAL -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img id="modal-img" src="" alt="Producto Vista">
+      <h3 id="modal-title"></h3>
+      <p id="modal-desc"></p>
+      <p id="modal-price" class="precio"></p>
+      <button class="btn">Agregar al carrito</button>
+    </div>
   </div>
- </header>
 
- <section class="productos">
-  <h2>Nuestros Productos</h2>
-  <div class="grid">
-   <div class="card">
-    <img src="https://via.placeholder.com/200" alt="Producto 1">
-    <h3>Producto 1</h3>
-    <p class="precio">$49.99</p>
-    <button class="comprar">Comprar</button>
-   </div>
-   <div class="card">
-    <img src="https://via.placeholder.com/200" alt="Producto 2">
-    <h3>Producto 2</h3>
-    <p class="precio">$79.99</p>
-    <button class="comprar">Comprar</button>
-   </div>
-   <div class="card">
-    <img src="https://via.placeholder.com/200" alt="Producto 3">
-    <h3>Producto 3</h3>
-    <p class="precio">$99.99</p>
-    <button class="comprar">Comprar</button>
-   </div>
-  </div>
- </section>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>&copy; 2025 MiTienda. Todos los derechos reservados.</p>
+  </footer>
 
- <div id="carritoModal" style="display:none; position:fixed; top:20%; left:30%; background:white; padding:20px; border:1px solid #ccc;">
-   <h2>Carrito</h2>
-   <ul id="listaCarrito"></ul>
-   <p><strong>Total:</strong> $<span id="total">0</span></p>
-   <button onclick="cerrarCarrito()">Cerrar</button>
- </div>
-
- <footer class="footer">
-  <p>&copy; 2025 MiTienda. Todos los derechos reservados.</p>
- </footer>
-
- <script>
- let carrito = [];
-
- document.querySelectorAll(".comprar").forEach((btn, index) => {
-   btn.addEventListener("click", () => {
-     const card = btn.parentElement;
-     const nombre = card.querySelector("h3").innerText;
-     const precioTexto = card.querySelector(".precio").innerText.replace("$", "");
-     const precio = parseFloat(precioTexto);
-     carrito.push({ nombre, precio });
-     actualizarCarrito();
-   });
- });
-
- function actualizarCarrito() {
-   document.getElementById("cantidad").innerText = carrito.length;
-   localStorage.setItem("carrito", JSON.stringify(carrito));
- }
-
- document.getElementById("verCarrito").addEventListener("click", () => {
-   const lista = document.getElementById("listaCarrito");
-   lista.innerHTML = "";
-   let total = 0;
-   carrito.forEach(item => {
-     const li = document.createElement("li");
-     li.textContent = `${item.nombre} - $${item.precio}`;
-     lista.appendChild(li);
-     total += item.precio;
-   });
-   document.getElementById("total").innerText = total.toFixed(2);
-   document.getElementById("carritoModal").style.display = "block";
- });
-
- function cerrarCarrito() {
-   document.getElementById("carritoModal").style.display = "none";
- }
-
- window.onload = () => {
-   const guardado = localStorage.getItem("carrito");
-   if (guardado) {
-     carrito = JSON.parse(guardado);
-     actualizarCarrito();
-   }
- }
- </script>
+  <!-- Script externo -->
+  <script src="script.js"></script>
 </body>
 </html>
