--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MiTienda - Productos</title>
   <link rel="stylesheet" href="css/style-pp.css">
+    <script src="js/cart.js"></script>
 </head>
 <body>
   <!-- HEADER -->
