--- a/carrito.html
+++ b/carrito.html
@@ -1,108 +1,122 @@
+
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>MiTienda - Carrito</title>
- <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MiTienda - Carrito de Compras</title>
+  <link rel="stylesheet" href="css/style-carrito.css">
+    <script src="js/cart.js"></script>
 </head>
 <body>
-
- <!-- HEADER -->
-
- <header class="header">
-  <div class="container">
-   <div class="logo">MiTienda</div>
-   <nav class="nav">
-    <a href="index.html">Inicio</a>
-    <a href="productos.html">Productos</a>
-    <a href="preview.html">Vista previa</a>
-    <a href="carrito.html" class="active">Carrito</a>
-    <a href="pago.html">Pago</a>
-    <a href="contacto.html">Contacto</a>
-   </nav>
-  </div>
- </header>
-
-
-
- <!-- CARRITO -->
-
- <section class="carrito">
-  <h2>Tu Carrito de Compras</h2>
-  <div class="cart-grid">
-
-   <!-- Producto en carrito -->
-
-   <div class="cart-item">
-    <img src="https://via.placeholder.com/100" alt="Producto 1">
-    <div class="cart-info">
-     <h3>Producto 1</h3>
-     <p>Precio: $49.99</p>
-     <button class="btn-preview" xx="openModal()">Vista previa</button>
+  <header class="header">
+    <div class="container">
+      <div class="logo">MiTienda</div>
+      <nav class="nav">
+        <a href="index.html">Inicio</a>
+        <a href="productos.html">Productos</a>
+        <a href="preview.html" class="active">Carrito</a>
+        <a href="pago.html">Pago</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
     </div>
-   </div>
+  </header>
 
-
-
-   <div class="cart-item">
-    <img src="https://via.placeholder.com/100" alt="Producto 2">
-    <div class="cart-info">
-     <h3>Producto 2</h3>
-     <p>Precio: $79.99</p>
-     <button class="btn-preview" xx="openModal()">Vista previa</button>
+  <section class="cart-section">
+    <div class="cart-header">
+      <h2>🛒 Mi Carrito</h2>
+      <div class="cart-count"><span id="item-count">3</span> productos</div>
     </div>
-   </div>
-  </div>
 
+    <div class="cart-content">
+      <div class="cart-items" id="cart-items">
+        <!-- Item 1 -->
+        <div class="cart-item">
+          <div class="item-img">
+            <img src="img/Silla.png" alt="Silla Ergonómica">
+          </div>
+          <div class="item-details">
+            <h3>Silla Ergonómica Premium</h3>
+            <p>Silla de oficina con soporte lumbar ajustable</p>
+            <p class="item-price">$129.99</p>
+          </div>
+          <div class="item-actions">
+            <button class="remove-btn" onclick="removeItem(this)">✕</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn" onclick="decreaseQty(this)">−</button>
+              <span class="quantity">1</span>
+              <button class="quantity-btn" onclick="increaseQty(this)">+</button>
+            </div>
+          </div>
+        </div>
 
+        <!-- Item 2 -->
+        <div class="cart-item">
+          <div class="item-img">
+            <img src="img/Silla.png" alt="Mesa de Trabajo">
+          </div>
+          <div class="item-details">
+            <h3>Mesa de Trabajo Moderna</h3>
+            <p>Mesa ajustable en altura con acabado de madera</p>
+            <p class="item-price">$249.99</p>
+          </div>
+          <div class="item-actions">
+            <button class="remove-btn" onclick="removeItem(this)">✕</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn" onclick="decreaseQty(this)">−</button>
+              <span class="quantity">2</span>
+              <button class="quantity-btn" onclick="increaseQty(this)">+</button>
+            </div>
+          </div>
+        </div>
 
-  <!-- Resumen -->
+        <!-- Item 3 -->
+        <div class="cart-item">
+          <div class="item-img">
+            <img src="img/Silla.png" alt="Lámpara LED">
+          </div>
+          <div class="item-details">
+            <h3>Lámpara LED Inteligente</h3>
+            <p>Iluminación regulable con control táctil</p>
+            <p class="item-price">$49.99</p>
+          </div>
+          <div class="item-actions">
+            <button class="remove-btn" onclick="removeItem(this)">✕</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn" onclick="decreaseQty(this)">−</button>
+              <span class="quantity">1</span>
+              <button class="quantity-btn" onclick="increaseQty(this)">+</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
-  <div class="cart-summary">
-   <h3>Total: $129.98</h3>
-   <a href="pago.html" class="btn">Proceder al Pago</a>
-  </div>
- </section>
+      <div class="cart-summary">
+        <h3 class="summary-title">Resumen del Pedido</h3>
+        <div class="summary-row">
+          <span>Subtotal:</span>
+          <span id="subtotal">$679.96</span>
+        </div>
+        <div class="summary-row">
+          <span>Envío:</span>
+          <span id="shipping">$15.00</span>
+        </div>
+        <div class="summary-row">
+          <span>IVA (18%):</span>
+          <span id="tax">$122.39</span>
+        </div>
+        <div class="summary-row total">
+          <span>Total:</span>
+          <span class="price" id="total">$817.35</span>
+        </div>
+        <button class="checkout-btn" onclick="checkout()">Proceder al Pago</button>
+        <button class="continue-shopping" onclick="continueShopping()">Seguir Comprando</button>
+      </div>
+    </div>
+  </section>
 
-
-
- <!-- MODAL -->
-
- <div id="modal" class="modal">
-  <div class="modal-content">
-   <span class="close" xx="closeModal()">&times;</span>
-   <img src="https://via.placeholder.com/300" alt="Producto Vista">
-
-   <h3>Producto en Vista Previa</h3>
-   <p>Descripción detallada del producto seleccionado. Aquí puedes poner más info.</p>
-   <p class="precio">$49.99</p>
-   <button class="btn">Agregar al carrito</button>
-  </div>
- </div>
-
-
-
- <!-- FOOTER -->
-
- <footer class="footer">
-  <p>&copy; 2025 MiTienda. Todos los derechos reservados.</p>
- </footer>
-
-
-
- <!-- JS SIMPLE -->
-
- <script>
-  function openModal() {
-   document.getElementById("modal").style.display = "flex";
-  }
-
-  function closeModal() {
-   document.getElementById("modal").style.display = "none";
-  }
-
- </script>
+  <footer class="footer">
+    <p>&copy; 2025 MiTienda. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
