--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MiTienda - Inicio</title>
   <link rel="stylesheet" href="css/styles.css">
+    <script src="js/cart.js"></script>
 </head>
 <body>
   <!-- HEADER -->
