--- a/pago.html
+++ b/pago.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MiTienda - Pago</title>
   <link rel="stylesheet" href="css/styles-pago.css">
+    <script src="js/cart.js"></script>
 </head>
 <body>
   <header class="header">
